--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
         </div>
         <nav>
           <ul class="nav__container">
-            <li>Sobre nós</li>
-            <li>Adote</li>
+            <li> <a href="index.html"> Sobre nós </a></li>
+            <li><a href="paginas/adote/index.html"> Adote </a></li>
             <li>Doação</li>
             <li>Contato</li>
           </ul>
