modificações no container nav

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
         </div>
         <nav>
           <ul class="nav__container">
-            <li> <a href="index.html"> Sobre nós </a></li>
-            <li><a href="paginas/adote/index.html"> Adote </a></li>
+            <li> <a href="#">Sobre nós</a></li>
+            <li><a href="paginas/adote/index.html">Adote</a></li>
             <li>Doação</li>
-            <li>Contato</li>
+            <li><a href="/src/paginas/contato/index.html">Contato</li>
           </ul>
         </nav>
       </div>
