--- a/src/paginas/adote/index.html
+++ b/src/paginas/adote/index.html
@@ -18,9 +18,9 @@
         <nav>
           <ul class="nav__container">
             <li><a href="index.html"> Sobre nós </a></li>
-            <li><a class= "sublinhado" href="paginas/adote/index.html"> Adote </a></li>
+            <li><a class= "sublinhado" href="#">Adote</a></li>
             <li>Doação</li>
-            <li>Contato</li>
+            <li> <a href="/src/paginas/contato/index.html"></a> Contato</li>
           </ul>
         </nav>
       </div>
