--- a/src/paginas/adote/index.html
+++ b/src/paginas/adote/index.html
@@ -12,15 +12,15 @@
     <header>
       <div class="header__container">
         <div class="header__title">
-          <img src="/src/imagens/icon_pata.svg" alt="Ícone Pata" />
+          <img src="/imagens/icon_pata.svg" alt="Ícone Pata" />
           <h1>Abrigo Animal</h1>
         </div>
         <nav>
           <ul class="nav__container">
-            <li><a href="index.html"> Sobre nós </a></li>
-            <li><a class= "sublinhado" href="#">Adote</a></li>
+            <li><a href="/index.html">Sobre nós</a></li>
+            <li><a href="#">Adote</a></li>
             <li>Doação</li>
-            <li> <a href="/src/paginas/contato/index.html"></a> Contato</li>
+            <li><a href="/paginas/contato/index.html">Contato</a></li>
           </ul>
         </nav>
       </div>
@@ -37,7 +37,7 @@
         </h2>
         <button class="btn__adopt">Preencher ficha de adoção</button>
       </div>
-      <img src="/src/imagens/adote.png" alt="" />
+      <img src="/imagens/adote.png" alt="cachorro e gato" />
     </section>
 
     <main class="adopt__form">
@@ -52,11 +52,11 @@
           required
         />
 
-        <label for="endereço"> Endereço </label>
+        <label for="endereço">Endereço</label>
         <input class="imput_container" type="text" id="Endereço" required />
 
         <div class="form__part__1 form-part-n ">
-          <label for="bairro"> Bairro </label>
+          <label for="bairro"> Bairro </label> 
           <input class="imput_container" type="text" id="Bairro" required />
 
           <label for="cidade_estado"> Cidade/Estado </label>
@@ -90,11 +90,9 @@
             class="imput_container"
             type="tel"
             id="Telefone"
-            required
-            placeholder="(XX)XXXXX-XXXX"
-          />
+            required />
 
-          <label for="whatsapp"> Whatsapp </label>
+          <label for="whatsapp">Whatsapp </label>
           <input class="imput_container" type="tel" id="Whatsapp" required />
         </div>
 
@@ -103,22 +101,22 @@
           dados, eu concordo com a Política de Privacidade e autorizo que a ONG
           entre em contato comigo.
         </label>
-        <a class="politica__container" href="#">Politica de Privacidade </a>
+        <a class="policy__container" href="#">Politica de Privacidade* </a>
         <input class="submit__container" type="submit" value="Enviar" />
       </form>
     </main>
 
     <footer class="footer_container">
-      <img src="/src/imagens/icon_pata.svg" alt="Ícone Pata" />
+      <img src="/imagens/icon_pata.svg" alt="Ícone Pata" />
       <h1>Abrigo Animal</h1>
       <img
         class="logo"
-        src="/src/imagens/img_facebook.svg"
+        src="/imagens/img_facebook.svg"
         alt="logo facebook"
       />
       <img
         class="logo"
-        src="/src/imagens/img_instagram.svg"
+        src="/imagens/img_instagram.svg"
         alt="logo instagram"
       />
     </footer>
