--- a/src/paginas/contato/index.html
+++ b/src/paginas/contato/index.html
@@ -13,63 +13,64 @@
     <header>
         <div class="header__container">
             <div class="header__title">
-                <img src="/src/imagens/icon_pata.svg" alt="Pata">
+                <img src="/imagens/icon_pata.svg" alt="Pata">
                 <h1>Abrigo Animal</h1>
             </div>
             <nav>
                 <ul class="nav__container">
-                    <li><a href="index.html">Sobre nós</a></li>
-                    <li><a href="/src/paginas/adote/index.html">Adote</a></li>
-                    <li>Doação</li>
-                    <li> <a href="#"></a>Contato</li>
+                  <li><a href="/index.html">Sobre nós </a></li>
+                  <li><a href="paginas/adote/index.html">Adote</a></li>
+                  <li>Doação</li>
+                  <li> <a href="#">Contato</a></li>
                 </ul>
-            </nav>
+              </nav>
         </div>
     </header>
-    <div>
-        <h1 class="contact__container"> Contato </h1>
-        <h2> Quer adotar ou fazer uma doação? entra em contato com a gente :) </h2>
+    <div class="contact__container">
+        <h1> Contato </h1>
+        <h2> Quer adotar ou fazer uma doação? entra <br> em contato com a gente :) </h2>
         <ul>
-            <li> <strong> Telefone: </strong> (99) 9999-9999</li>
-            <li><strong> WhatsApp: </strong>(99) 9 9999-9999</li>
+            <li> <strong> Telefone: </strong> (81) 9 9959-8679</li>
+            <li><strong> WhatsApp: </strong>(81) 9 8569-9159</li>
             <li> <strong> E-mail: </strong> Abrigoanimal@ong.com.br</li>
         </ul>
-        <img src="/src/imagens/pata.png" alt="Icone de pata">
+        <img src="/imagens/pata.png" alt="Icone de pata">
     </div>
     <main class="contact__us__container">
         <form>
             <h2>Fale conosco</h2>
 
             <label class="title__container" for="Nome">Nome</label>
-            <input class="contact__us__container__input" type="text" id="Nome" placeholder="Seu Nome" required />
+            <input class="contact__us__container__input .others__input__textarea " type="text" id="Nome" placeholder="Seu Nome" required />
 
             <label class="title__container" for="WhatsApp">WhatsApp</label>
-            <input class="contact__us__container__input" type="text" id="WhatsApp" placeholder="Seu WhatsApp"
+            <input class="contact__us__container__input whastApp" type="text" id="WhatsApp" placeholder="Seu WhatsApp"
                 required />
 
             <label class="title__container" for="Assunto">Assunto</label>
-            <input class="contact__us__container__input" type="text" id="Assunto" placeholder="Adotar animal"
+            <input class="contact__us__container__input .others__input__textarea" type="text" id="Assunto" placeholder="Adotar Animal"
                 required />
 
             <label class="title__container" for="Mensagem">Mensagem </label>
-            <textarea id="Mensagem" cols="15" rows="15" placeholder="Sua Mensagem" required></textarea>
+            <textarea  class="message" id="Mensagem" placeholder="Sua Mensagem" required></textarea>
 
             <label>
                 <input class="contact__checkbox" type="checkbox" checked /> Ao informar meus
                 dados, eu concordo com a Política de Privacidade.
             </label>
-            <a class="policy__container" href="#">Politica de Privacidade </a>
+            <a class="policy__container" href="#">Politica de Privacidade* </a>
 
+            <div class="contact__submit__container__p1">
             <input class="contact__submit__container botao " type="submit" value="Enviar" />
-
+        </div>
         </form>
     </main>
 </body>
 
 <footer class="footer_container">
-    <img src="/src/imagens/icon_pata.svg" alt="Ícone Pata" />
+    <img src="/imagens/icon_pata.svg" alt="Ícone Pata" />
     <h1>Abrigo Animal</h1>
-    <img class="logo" src="/src/imagens/img_facebook.svg" alt="logo facebook" />
-    <img class="logo" src="/src/imagens/img_instagram.svg" alt="logo instagram" />
+    <img class="logo" src="/imagens/img_facebook.svg" alt="logo facebook" />
+    <img class="logo" src="/imagens/img_instagram.svg" alt="logo instagram" />
 </footer>
 </html>
