--- a/src/paginas/contato/index.html
+++ b/src/paginas/contato/index.html
@@ -7,25 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Abrigo Animal</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="../../index.js"></script>
 </head>
 
 <body>
     <header>
         <div class="header__container">
-            <div class="header__title">
-                <img src="/imagens/icon_pata.svg" alt="Pata">
-                <h1>Abrigo Animal</h1>
-            </div>
-            <nav>
-                <ul class="nav__container">
-                  <li><a href="/index.html">Sobre nós </a></li>
-                  <li><a href="paginas/adote/index.html">Adote</a></li>
-                  <li>Doação</li>
-                  <li> <a href="#">Contato</a></li>
-                </ul>
-              </nav>
+          <a class="header__title" href="../../index.html">
+            <img src="../../imagens/icon_pata.svg" alt="Ícone Pata" />
+            <h1>Abrigo Animal</h1>
+          </a>
+          <nav>
+            <ul class="nav__container">
+              <li>Sobre nós</li>
+              <li><a href="../adote/index.html">Adote</a></li>
+              <li>Doação</li>
+              <li><a href="#">Contato</a></li>
+            </ul>
+          </nav>
         </div>
-    </header>
+      </header>
     <div class="contact__container">
         <h1> Contato </h1>
         <h2> Quer adotar ou fazer uma doação? entra <br> em contato com a gente :) </h2>
@@ -34,25 +35,26 @@
             <li><strong> WhatsApp: </strong>(81) 9 8569-9159</li>
             <li> <strong> E-mail: </strong> Abrigoanimal@ong.com.br</li>
         </ul>
-        <img src="/imagens/pata.png" alt="Icone de pata">
+        <img src="../../imagens/pata.png" alt="Icone de pata">
     </div>
     <main class="contact__us__container">
         <form>
             <h2>Fale conosco</h2>
 
             <label class="title__container" for="Nome">Nome</label>
-            <input class="contact__us__container__input .others__input__textarea " type="text" id="Nome" placeholder="Seu Nome" required />
+            <input class="contact__us__container__input .others__input__textarea " type="text" id="Nome"
+                placeholder="Seu Nome" required />
 
             <label class="title__container" for="WhatsApp">WhatsApp</label>
             <input class="contact__us__container__input whastApp" type="text" id="WhatsApp" placeholder="Seu WhatsApp"
                 required />
 
             <label class="title__container" for="Assunto">Assunto</label>
-            <input class="contact__us__container__input .others__input__textarea" type="text" id="Assunto" placeholder="Adotar Animal"
-                required />
+            <input class="contact__us__container__input .others__input__textarea" type="text" id="Assunto"
+                placeholder="Adotar Animal" required />
 
             <label class="title__container" for="Mensagem">Mensagem </label>
-            <textarea  class="message" id="Mensagem" placeholder="Sua Mensagem" required></textarea>
+            <textarea class="message" id="Mensagem" placeholder="Sua Mensagem" required></textarea>
 
             <label>
                 <input class="contact__checkbox" type="checkbox" checked /> Ao informar meus
@@ -61,16 +63,17 @@
             <a class="policy__container" href="#">Politica de Privacidade* </a>
 
             <div class="contact__submit__container__p1">
-            <input class="contact__submit__container botao " type="submit" value="Enviar" />
-        </div>
+                <input class="contact__submit__container botao " type="submit" value="Enviar" />
+            </div>
         </form>
     </main>
 </body>
 
 <footer class="footer_container">
-    <img src="/imagens/icon_pata.svg" alt="Ícone Pata" />
+    <img src="../../imagens/icon_pata.svg" alt="Ícone Pata" />
     <h1>Abrigo Animal</h1>
-    <img class="logo" src="/imagens/img_facebook.svg" alt="logo facebook" />
-    <img class="logo" src="/imagens/img_instagram.svg" alt="logo instagram" />
+    <img class="logo" src="../../imagens/img_facebook.svg" alt="logo facebook" />
+    <img class="logo" src="../../imagens/img_instagram.svg" alt="logo instagram" />
 </footer>
+
 </html>
