--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       </div>
     </header>
     <section
-      class="container home__container bg-blue display-flex align-center justify-center"
+      class="container home__container bg-blue display-flex align-center justify-center" id="home-container"
     >
       <div class="left__container display-flex flex-column">
         <h1>Amor de verdade, não se compra, se encontra</h1>
@@ -37,7 +37,7 @@
         </h2>
         <button class="btn" onclick="scrollToElement('steps-container')">Adotar um animal</button>
       </div>
-      <img src="imagens/home_cachorro.png" alt="Menino segurando cachorro" />
+      <img class="img" src="imagens/home_cachorro.png" alt="Menino segurando cachorro" />
     </section>
 
     <div
@@ -91,7 +91,7 @@
           <p>Adote</p>
         </li>
       </ul>
-      <div class="display-flex justify-center align-center">
+      <div class="display-flex justify-center align-center btn__steps__container">
         <a href="paginas/adote/index.html">
           <button class="btn">Adotar um animal</button>
         </a>
@@ -118,7 +118,7 @@
           nossas redes sociais.
         </p>
       </div>
-      <img src="imagens/doacao.png" alt="menina segurando gato" />
+      <img class="img" src="imagens/doacao.png" alt="menina segurando gato" />
     </section>
     <div class="contact__container display-flex justify-center align-center">
 
