--- a/src/paginas/adote/index.html
+++ b/src/paginas/adote/index.html
@@ -18,9 +18,7 @@
         </a>
         <nav>
           <ul class="nav__container">
-            <li> Sobre nós</li>
             <li><a href="#">Adote</a></li>
-            <li>Doação</li>
             <li><a href="../contato/index.html">Contato</a></li>
           </ul>
         </nav>
@@ -30,7 +28,7 @@
     <section
       class="adopt__container container display-flex justify-center align-center"
     >
-      <div class="left__container display-flex flex-column justify-center">
+      <div class="left__container display-flex flex-column justify-center  left__container__adopt">
         <h1>Processo de adoção</h1>
         <h2>
           Está em busca de uma animal para completar a sua família? Preencha
@@ -38,7 +36,7 @@
         </h2>
         <button class="btn__adopt" onclick="scrollToElement('adoption-form')"> Preencher ficha de adoção</button>
       </div>
-      <img src="../../imagens/adote.png" alt="cachorro e gato" />
+      <img class="img__adopt" src="../../imagens/adote.png" alt="cachorro e gato" />
     </section>
 
     <main class="adopt__form" id="adoption-form">
