--- a/src/paginas/contato/index.html
+++ b/src/paginas/contato/index.html
@@ -19,9 +19,7 @@
           </a>
           <nav>
             <ul class="nav__container">
-              <li>Sobre nós</li>
               <li><a href="../adote/index.html">Adote</a></li>
-              <li>Doação</li>
               <li><a href="#">Contato</a></li>
             </ul>
           </nav>
@@ -38,7 +36,7 @@
         <img src="../../imagens/pata.png" alt="Icone de pata">
     </div>
     <main class="contact__us__container">
-        <form>
+        <form class="contact__us__form">
             <h2>Fale conosco</h2>
 
             <label class="title__container" for="Nome">Nome</label>
