--- a/src/pages/adopt/index.html
+++ b/src/pages/adopt/index.html
@@ -37,7 +37,7 @@
       <div class="header__container">
         <a class="header__title" href="../../index.html">
           <img src="../../assets/icon_paw.svg" alt="Ícone Pata" />
-          <h1>Abrigo Animal</h1>
+          <h1 class="title">Abrigo Animal</h1>
         </a>
         <nav>
           <ul class="nav__container">
