--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             </li>
             <li onclick="scrollToElement('donation-container')">Doação</li>
             <li>
-              <a href="pages/contact/index.html">Contato</a>
+              <a href="./pages/contact/index.html">Contato</a>
             </li>
           </ul>
         </nav>
