--- a/pages/adopt/index.html
+++ b/pages/adopt/index.html
@@ -172,7 +172,7 @@
               </div>
               <div class="modal-footer">
                 <button
-                  type="button"
+                  type="button-modal"
                   class="btn btn-secondary"
                   data-bs-dismiss="modal"
                 >
