--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -98,7 +98,7 @@
           Enviar
           </button>
         <div class="modal" id="exampleModal" tabindex="-1">
-          <div class="modal-dialog">
+          <div class="modal-dialog ">
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title">Mensagem enviada com sucesso!</h5>
@@ -117,6 +117,7 @@
                   type="button"
                   class="btn btn-secondary"
                   data-bs-dismiss="modal"
+                  id="button" disabled="disabled"
                 >
                   Fechar
                 </button>
